<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:animateLayoutChanges="true"
    tools:context=".BlockActivity">

    <TextView
        android:id="@+id/block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:gravity="center_horizontal"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        android:padding="10dp"
        android:background="?attr/colorSurface"
        android:text="@string/heading_blocking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/feed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/block">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchGreen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:checked="true"
            android:fontFamily="@font/nunito"
            android:onClick="switchGreen"
            android:padding="10dp"
            android:text="block green dot users"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsers"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchUsers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:checked="true"
            android:fontFamily="@font/nunito"
            android:onClick="switchUsers"
            android:padding="10dp"
            android:text="@string/switch_block_users"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchGreen"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchWords"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:checked="true"
            android:fontFamily="@font/nunito"
            android:onClick="switchComments"
            android:padding="10dp"
            android:text="@string/switch_block_words"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextWords"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/textViewHelp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/nunito"
            android:text="@string/help_enter_words_to_block"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextWords"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="?attr/colorSurfaceVariant"
            android:ems="10"
            android:fontFamily="@font/nunito"
            android:hint="@string/hint_words"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHint="?attr/colorPrimaryVariant"
            app:layout_constraintEnd_toStartOf="@+id/textViewSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHelp" />

        <TextView
            android:id="@+id/textViewSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nunito"
            android:onClick="saveWords"
            android:padding="10dp"
            android:text="@string/save"
            android:textColor="?attr/colorPrimaryVariant"
            app:layout_constraintBottom_toBottomOf="@+id/editTextWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextWords" />

        <TextView
            android:id="@+id/textViewBlockedUsersHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/nunito"
            android:text="@string/blocked_users"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchWords" />

        <EditText
            android:id="@+id/editTextUsers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="?attr/colorSurfaceVariant"
            android:ems="10"
            android:fontFamily="@font/nunito"
            android:hint="@string/hint_users"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHint="?attr/colorPrimaryVariant"
            app:layout_constraintEnd_toStartOf="@+id/textViewSaveUsers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewBlockedUsersHelp" />

        <TextView
            android:id="@+id/textViewSaveUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nunito"
            android:onClick="saveUsers"
            android:padding="10dp"
            android:text="@string/save"
            android:textColor="?attr/colorPrimaryVariant"
            app:layout_constraintBottom_toBottomOf="@+id/editTextUsers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextUsers" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>